--- a/.github/workflows/pytest_automation.yml
+++ b/.github/workflows/pytest_automation.yml
@@ -36,4 +36,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest --cov=calculator --cov-branch --cov-report=html --cov-fail-under=90
+        pytest -v --cov=calculator --cov-branch --cov-report=html --cov-fail-under=90
