--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -67,5 +67,5 @@ jobs:
           COSIGN_EXPERIMENTAL: 1  # Set the environment variable to bypass the prompt
         run: |
           echo "Signing image with cosign..."
-          echo "${TAGS}" | xargs -I {} cosign sign {}@${DIGEST}
+          echo "${TAGS}" | xargs -I {} cosign sign -y {}@${DIGEST}
 
